# Capstone-II

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
Documentation/: Software Document template.docx
Source/OBDII Scanner/: OBDII Scanner.cpp  OBDII Scanner.slnx  OBDII Scanner.vcxproj  OBDII Scanner.vcxproj.filters
resources/dtc/: dtc.qrc  generic.json
resources/dtc/manufacturer/: honda.json  toyota.json
resources/emulator/: emulator.qrc  obd_message.json
scripts/: updater.ps1
simulator/: README.md
simulator/ObdSimulator/: ObdSimulator.ino
src/: AppSettings.cpp  AppSettings.h  AppStyle.cpp  AppStyle.h  CanFrame.h  DashboardConfigDialog.cpp  DashboardConfigDialog.h  DtcLibrary.cpp  DtcLibrary.h  Elm327Connection.cpp  Elm327Connection.h  FrameSummaryModel.cpp  FrameSummaryModel.h  FrameTableModel.cpp  FrameTableModel.h  GaugeWidget.cpp  GaugeWidget.h  GvretConnection.cpp  GvretConnection.h  LiveChartWidget.cpp  LiveChartWidget.h  MainWindow.cpp  MainWindow.h  NewConnectionDialog.cpp  NewConnectionDialog.h  ObdDtcClient.cpp  ObdDtcClient.h  ObdFreezeFrameClient.cpp  ObdFreezeFrameClient.h  ObdPidMonitor.cpp  ObdPidMonitor.h  ObdVehicleInfo.cpp  ObdVehicleInfo.h  PreferencesDialog.cpp  PreferencesDialog.h  ReportExporter.cpp  ReportExporter.h  SessionLogger.cpp  SessionLogger.h  Units.cpp  (+10 more)
src/emulator/: Elm327EmulatorEngine.cpp  Elm327EmulatorEngine.h  EmulatorTransport.cpp  EmulatorTransport.h  EmulatorWindow.cpp  EmulatorWindow.h  ObdMessageModel.cpp  ObdMessageModel.h  PidEncoders.cpp  PidEncoders.h
tests/: CMakeLists.txt  edge_case_report_nurdos.md  test_app_link.cpp  test_dtc_library.cpp  test_emulator_engine.cpp  test_emulator_transport.cpp  test_vin_decoder.cpp
